# Life-Events-Coach

./: .gitignore  AGENTS.md  README.md  compose.yaml  skills-lock.json
server/: .dockerignore  .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml  ruff.toml
server/app/: main.py
server/app/core/: auth.py  database.py  errors.py  logging.py  migrations.py  rate_limit.py  settings.py  telemetry.py
server/app/modules/account/: data_lifecycle.py
server/app/modules/notifications/: preferences.py  provider.py  repository.py  scheduler.py  service.py  work_repository.py  worker.py
server/app/modules/phases/: action_repository.py  ask.py  ask_api.py  cache.py  catalog.py  editorial.py  enrollment.py  enrollment_repository.py  fixtures.py  freshness.py  grounding.py  (+8 more)
server/app/scripts/: api_load_smoke.py  grounding_provider_smoke.py  notification_cycle.py
server/migrations/: 001_phase_module_versions.sql  002_phase_enrollments.sql  003_card_actions.sql  004_notification_preferences.sql  005_card_completion_date.sql  006_phase_lifecycle.sql  007_editorial_drafts.sql  008_editorial_publication_idempotency.sql  009_notification_intents.sql
server/tests/: test_ask_api.py  test_auth.py  test_distributed_rate_limit.py  test_editorial_api.py  test_grounding_provider_smoke.py  test_health.py  test_lifecycle_api.py  test_load_smoke.py  test_migrations.py  test_notification_cycle.py  test_notifications_api.py  test_phase_catalog.py  test_phase_isolation.py  test_rate_limit.py  test_rate_limit_backend_health.py  test_roadmap.py  test_roadmap_api.py  test_second_phase.py
(+139 files in other folders)
