[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.10.1",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-exporter-otlp>=1.44.0",
    "opentelemetry-instrumentation-fastapi>=0.65b0",
    "opentelemetry-sdk>=1.44.0",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
